# structure_comparer

./: .env  .gitignore  README.md  classification.py  compare.py  consts.py  docker-compose.yml  helpers.py  main.py  manual_entries.py  mapper.py  mapping.json  requirements.txt  results.md  results.txt  results_dict.py  results_html.py  server.py
.devcontainer/: devcontainer.json
service/: Dockerfile  README.md  pyproject.toml  requirements.txt
service/src/: main.py  server.py
service/src/structure_comparer/: __init__.py  __main__.py  classification.py  compare.py  config.py  consts.py  errors.py  handler.py  helpers.py  manual_entries.py  results_dict.py  results_html.py  serve.py  server.py
service/src/structure_comparer/data/: comparison.py  config.py  fhir_profile.py  mapping.py  package.py  profile.py  profile_diff.py  profile_map.py  project.py
service/src/structure_comparer/data/file/: __init__.py  file.py  manual_entries.py
service/src/structure_comparer/files/: template.html.j2
service/src/structure_comparer/io/: mapping_json.py
service/src/structure_comparer/io/static_html/: __init__.py  template.html.j2
service/src/structure_comparer/model/: comparison.py  get_mappings_output.py  init_project_input.py  mapping.py  mapping_input.py  package.py  profile.py  project.py
service/tests/: test_compare.py  test_config.py  test_serve.py
service/tests/data/: test_fhir_profile.py  test_profile_diff.py
service/tests/files/project/: config.json
service/tests/files/project/data/: StructureDefinition-observation-de-vitalsign-atemfrequenz.json  (+1 more)
(+256 files in other folders)
