[tool.poetry]
name = "structure-comparer"
version = "0.1.0"
description = ""
authors = ["Alexander Essenwanger <a.essenwanger@gematik.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jinja2 = "^3.1.4"
pyyaml = "^6.0.1"
fastapi = {extras = ["standard"], version = "^0.115.12"}
fhir-resources = "^8.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
